# db2tcl

./: .cvsignore  .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  README.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  db2tcl.spec  db2tcl.spec.in  ibmdb2.m4  pkgIndex.tcl.in  tcl.m4
doc/: Makefile.in
src/: .cvsignore  Makefile.am  Makefile.in  db2tcl.c  db2tcl.h  db2tclcmds.c  db2tclcmds.h  db2tclsh.c  db2wish.c
tests/: Makefile.am  Makefile.in  test1.tcl  test2.tcl  test3.tcl  test4.tcl  test5.tcl
win/: makefile.vc  rules.vc
