dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/db2tclsh.c)
AC_REVISION($Id$)
AM_INIT_AUTOMAKE(db2tcl, 0.0.1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_MAKE_SET
AM_SANITY_CHECK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_CYGWIN
AC_MINGW32
AC_OBJEXT
AC_EXEEXT

dnl Checks for libraries.
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AM_WITH_DMALLOC
WEST_WITH_IBM_DB2

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h sqlcli.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_SEARCH_LIBS(sqlurlog_api, db2 db2e, , 
    AC_MSG_ERROR(No IBM DB2 libraries found!))
AC_SEARCH_LIBS(Tcl_Init, tcl8.3 tcl8.2 tcl8.1 tcl8.0 tcl, , 
    AC_MSG_WARN(the Tcl library, ))
AC_SEARCH_LIBS(Tk_Init, tk8.3 tk8.2 tk8.1 tk8.0 tk, ,
    AC_MSG_WARN(the Tk library, ))

AC_SUBST(VERSION)

AC_OUTPUT([Makefile README src/Makefile doc/Makefile tests/Makefile])
